# checka

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  index.html  package.json  update_icons.rs
.github/workflows/: release.yml
src/: App.css  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_manager.rs  command.rs  main.rs  tray.rs
src-tauri/src/agents/: claude_code.rs  gemini.rs  mod.rs
src/components/: AgentStatusItem.css  AgentStatusItem.tsx
